# RGBD_Mapping

./: README.md  vo+mapping.vcg
arduino/HelloWorld/: HelloWorld.ino
arduino/KTH_Robot13_openloop/: KTH_Robot13_openloop.ino
arduino/KTH_Robot13_rev2/: KTH_Robot13_rev2.ino
arduino/libraries/Motors/: Motors.cpp
arduino/libraries/ros_lib/ccny_rgbd/: AddManualKeyframe.h  GenerateGraph.h  Load.h  PublishKeyframe.h  PublishKeyframes.h  Save.h  SolveGraph.h
arduino/libraries/ros_lib/differential_drive/: KeyEvent.h  Lights.h  MouseEvent.h
arduino/libraries/ros_lib/rosserial_msgs/: Log.h
calibration/: CMakeLists.txt
ccny_openni_launch/launch/: all_cameras.launch  ccny_playBag.launch  commands  openni_modified.launch  openni_record.launch  openni_record_modified.launch  single_camera.launch  webcam.launch
ccny_openni_launch/launch/include/: device_modified.launch  proc.launch  proc_modified.launch  record_modified.launch
ccny_rgbd/: CMakeLists.txt
ccny_rgbd/include/ccny_rgbd/: types.h
ccny_rgbd/include/ccny_rgbd/apps/: feature_viewer.h  keyframe_mapper.h  rgbd_image_proc.h  visual_odometry.h
ccny_rgbd/launch/: feature_viewer.launch  visual_odometry.launch  vo+mapping.launch  vo+mapping2.rviz
ccny_rgbd/src/: util.cpp
ccny_rgbd/src/apps/: feature_viewer.cpp  keyframe_mapper.cpp  rgbd_image_proc.cpp  visual_odometry.cpp
ccny_rgbd/src/ccny_rgbd/srv/: _Load.py  _PublishKeyframes.py  _Save.py
ccny_rgbd/src/node/: rgbd_image_proc_node.cpp  visual_odometry_node.cpp
ccny_rgbd/src/nodelet/: rgbd_image_proc_nodelet.cpp
differential_drive/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
differential_drive/bagfiles/: square.bag
differential_drive/launch/: arduino.launch  teleop.launch
differential_drive/msg/: AnalogC.msg  KeyEvent.msg  Lights.msg  MouseEvent.msg  Sharp.msg  Speed.msg
differential_drive/scripts/: plot_diff_enc.sh  plot_diff_enc_1.sh
differential_drive/src/: .gitignore  Bezier.cpp  Bezier.h  HumanInterface2.cpp  KeyboardControl.cpp  KeyboardEvent.cpp  bezier_traj.cpp  dimension.h  goto.cpp  mode1.cpp  mode2.cpp  openLoop.cpp
iccv2011/src/: tutorial.cpp
lib_rgbdtools/include/rgbdtools/: rgbdtools.h
lib_rgbdtools/include/rgbdtools/features/: gft_detector.h
lib_rgbdtools/rgbdtools_git/: CMakeLists.txt
lib_rgbdtools/rgbdtools_git/src/: rgbd_util.cpp
mergeMaps/: CMakeLists.txt  main.cpp
(+11 files in other folders)
